--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /web/WEB-INF/*.xml
 !/web/WEB-INF/web.xml
 !/web/WEB-INF/_corpus.xml
+!/web/WEB-INF/urlrewrite.xml
 /web/WEB-INF/bases
 /web/WEB-INF/*.csv
 
