--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,5 @@
 eclipse.preferences.version=1
 encoding//web/*.html=UTF-8
-encoding//web/html/about.html=UTF-8
+encoding//web/html/aide.html=UTF-8
 encoding//web/html/bases.html=UTF-8
-encoding//web/html/help.html=UTF-8
 encoding/<project>=UTF-8
